# exercise

./: README.md  pyproject.toml
technical_exercise/: 1.clean_dataset.ipynb  2.input_variables.ipynb  3.econometric_models.ipynb  4.5.pred_ethical.ipynb  4.ml_model.ipynb  analysis.ipynb  preprocessing.ipynb  test.ipynb
technical_exercise/data/: customer_data_modified.pkl  savings_customers_data_v1.csv
technical_exercise/models/: label_encoder_ethnicity_group_model.pkl  label_encoder_gender_model.pkl  label_encoder_geo_region_model.pkl  net_salary_pred_ethical.pkl  net_salary_pred_non_ethical.pkl
