[tool.poetry]
name = "technical-exercise"
version = "0.1.0"
description = ""
authors = ["Ahmed Hasib <ahmed.hasib@city-holdings.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
scikit-learn = "^1.3.2"
statsmodels = "^0.14.0"
xgboost = "^2.0.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
